<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.liulc.test.MainActivity">


	<TextView
		android:id="@+id/tv_msg"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:textSize="18sp"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:scrollbars="vertical"
		android:text="@string/about"
		android:layout_above="@+id/ll_bt"/>

	<LinearLayout
		android:id="@+id/ll_bt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_gravity="center">
		<Button
			android:id="@+id/bt_chooseDb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginBottom="4dp"
			android:text="@string/choose_db"/>

		<Button
			android:id="@+id/bt_password"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginBottom="4dp"
			android:text="@string/password"/>

		<Button
			android:id="@+id/bt_encryptDb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginBottom="4dp"
			android:text="@string/encrypt"/>

		<Button
			android:id="@+id/bt_decipherDb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginBottom="4dp"
			android:text="@string/decipher"/>
	</LinearLayout>

</RelativeLayout>
